// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert should convert style attribute 1`] = `
"import React from \\"react\\";

const SvgComponent = props => (
  <svg
    xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
    width={48}
    height={48}
    {...props}
  >
    <g transform=\\"translate(0 -1004.362)\\">
      <g id=\\"a\\" color=\\"#000\\" fill=\\"#a3a3a3\\" strokeWidth={8}>
        <rect
          style={{ marker: \\"none\\" }}
          width={4}
          height={4}
          x={4}
          y={1010.362}
          rx={0.2}
          ry={0.2}
          overflow=\\"visible\\"
        />
        <rect
          ry={0.2}
          rx={0.2}
          y={1010.362}
          x={12}
          height={4}
          width={32}
          style={{ marker: \\"none\\" }}
          overflow=\\"visible\\"
        />
      </g>
      <use xlinkHref=\\"#a\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 8)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 16)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 24)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 32)\\" />
    </g>
  </svg>
);

export default SvgComponent;
"
`;

exports[`convert should convert using config 1`] = `
"import React from \\"react\\";

const SvgComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
);

export default SvgComponent;
"
`;

exports[`convert should remove style tags 1`] = `
"import React from \\"react\\";

const SvgComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g fill=\\"red\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37L37 51\\" id=\\"Shape\\" />
        <path d=\\"M51 51L37 37\\" />
      </g>
    </g>
  </svg>
);

export default SvgComponent;
"
`;

exports[`convert should support react-native 1`] = `
"import React from \\"react\\";

const SvgComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g fill=\\"red\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37L37 51\\" id=\\"Shape\\" />
        <path d=\\"M51 51L37 37\\" />
      </g>
    </g>
  </svg>
);

export default SvgComponent;
"
`;

exports[`rawConvert should convert using specific options 1`] = `
"import React from 'react'

const MyComponent = (props) => {/*?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?*/}
<svg width=\\"88px\\" height=\\"88px\\" viewBox=\\"0 0 88 88\\" version={1.1} xmlnsXlink=\\"http://www.w3.org/1999/xlink\\" {...props}>
  {/*Generator: Sketch 46.2 (44496) - http://www.bohemiancoding.com/sketch*/}
  <title>
    Dismiss
  </title>
  <desc>
    Created with Sketch.
  </desc>
  <defs />
  <g id=\\"Blocks\\" stroke=\\"none\\" strokeWidth={1} fill=\\"none\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
    <g id=\\"Dismiss\\" stroke=\\"currentColor\\" strokeWidth={2}>
      <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
      <path d=\\"M51,51 L37,37\\" id=\\"Shape\\" />
    </g>
  </g>
</svg>


export default MyComponent"
`;
